--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -33,7 +33,7 @@
         "title": "Basic setup"
       },
       "examples/nextjs-setup": {
-        "title": "Nextjs Setup"
+        "title": "Next.js Setup"
       },
       "getting-started/configuring-the-collection": {
         "title": "Configuring the collection"
