--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -333,10 +333,13 @@
         "title": "Using the collection"
       },
       "version-2.0.0/jsonapi-angular/version-2.0.0-base-fetch": {
-        "title": "Angular JSON:API baseFetch"
+        "title": "baseFetch"
+      },
+      "version-2.0.0/jsonapi-angular/version-2.0.0-example-repo": {
+        "title": "Example repo"
       },
       "version-2.0.0/jsonapi-angular/version-2.0.0-mixin": {
-        "title": "Angular JSON:API mixin"
+        "title": "Mixin"
       },
       "version-2.0.0/jsonapi/version-2.0.0-jsonapi-basic-configuration": {
         "title": "Basic configuration"
@@ -389,11 +392,11 @@
       "version-2.0.0/mixins/version-2.0.0-building-your-own-mixin": {
         "title": "Build your own mixin"
       },
-      "version-2.0.0/mixins/version-2.0.0-jsonapi-mixin": {
-        "title": "JSONAPI Mixin"
-      },
       "version-2.0.0/mixins/version-2.0.0-jsonapi-angular-mixin": {
         "title": "JSONAPI Angular Mixin"
+      },
+      "version-2.0.0/mixins/version-2.0.0-jsonapi-mixin": {
+        "title": "JSONAPI Mixin"
       },
       "version-2.0.0/mixins/version-2.0.0-network-mixin": {
         "title": "Network Mixin"
